[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/units/unit.gd" type="Script" id=1]
[ext_resource path="res://assets/soldier_art/Blob.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.873, 10.4024 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[node name="unit" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.71123, -2.71123 )
texture = ExtResource( 2 )
hframes = 11
frame = 8

[node name="detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource( 1 )

[node name="fow" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="min_range" type="CollisionShape2D" parent="fow"]

[node name="range" type="CollisionShape2D" parent="fow"]

[node name="shoot_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )
anims/shoot = SubResource( 4 )
[connection signal="area_entered" from="fow" to="." method="_on_fow_area_entered"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
